# carton

./: CMakeLists.txt  CMakePresets.json  README.md  carton-packages-schema.json  carton-packages.toml  carton-schema.json  carton.toml  index.html  registry.toml
src/: build.cpp  cache.cppm  cli.cppm  collect_meta.cpp  compile_command.cpp  compile_command.cppm  compile_multi.cpp  config.cppm  configure.cpp  dependency.cppm  executables.cpp  git_clone.cpp  lib.cppm  macro.h  main.cpp  main.h  module.cpp  p1689.cppm  package.cppm  profile.cppm  project.cpp  resolve.cpp  resolve_modules.cpp  resolve_path.cpp  run.cpp  std.fs.cppm  utils.cpp
